# hashmon

./: LICENSE.txt  README.md
artifact/: accuracy_plot.py  build.sh  dejavu_wrapper.sh  examples.sh  gen_traces.sh  perf_table.py  run_accuracy.sh  run_perf.sh  sys_info.sh
artifact/amazon/: README.txt  convert.py
artifact/dejavu/: version.txt
artifact/formulas/: amazon.sig  e1.mfotl  e1.qtl  e2.mfotl  e2.qtl  e3.mfotl  e3_let.mfotl  e4.mfotl  e4.qtl  ex1.mfotl  ex1_days.mfotl  frd.mfotl  pq.sig  pq2.sig
artifact/monpoly/: dune-project
artifact/monpoly/contrib/: dune
artifact/monpoly/contrib/clhash/: .gitignore  Makefile
artifact/monpoly/src/: aggreg.ml  aggreg.mli  algorithm.ml  algorithm.mli  clhash_stubs.c  hashing.mli  main.ml  mformula.ml  misc.ml  misc.mli  murmur_hash3.ml  murmur_hash3.mli  relation.ml  tuple.ml  tuple.mli  verified_adapter.ml
artifact/monpoly_no_errprobs/: AUTHORS  README.md  monpoly-dev.opam
artifact/monpoly_no_errprobs/src/: algorithm.ml  dune  extformula.ml  extformula.mli  hashing.ml  helper.ml  hypercube_slicer.ml  marshalling.ml  mformula.mli  perf.ml  predicate.ml  predicate.mli  relation.ml  relation.mli  sliding.ml  sliding.mli  splitting.ml
artifact/paper_results/: accuracy.csv  perf.csv  perf.txt
artifact/tools/: diff.ml  dune  extract.ml  generate.ml  test.ml  util.ml  util.mli  verdict.ml  verdict.mli  verdict_lexer.mll
