(executable
  (name main)
  (public_name monpoly)
  (package monpoly-dev)
  (libraries str unix zarith dune-build-info)
  (modules (:standard \ Main_js Splitting))
  (foreign_archives ../contrib/clhash)
  (foreign_stubs
    (language c)
    (names clhash_stubs)
    (include_dirs ../contrib/clhash/include)
    (flags (:standard -msse2 -mpclmul)))
  (flags (:standard -warn-error -A -w -27-32..39)))

(ocamllex formula_lexer log_lexer)
(ocamlyacc formula_parser log_parser)
